@@ -5,7 +5,9 @@
 	Added hashdeep program to support multihashing
 
 * Bug Fixes
-
+	
+	Fixed obscure bug that caused a crash (double free) when
+	attempting to check a very small file for EnCase hashes
 
 
 ** Changes in version 2.0.1 (31 Oct 2007)
